--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -95,8 +95,10 @@
         border-radius: 25px;
     }
     footer{
-    	background-color: blue;
-    	width: 100%;
-    	height: 100%;
+    	background-color: lightblue;
+    	height: 33px;
+    	margin-bottom:0px;
+    	padding:10px;
+    	text-align: center;
     }
     
