--- a/src/main/resources/static/customerdashboard.css
+++ b/src/main/resources/static/customerdashboard.css
@@ -96,4 +96,4 @@ input {
 
 .statusResultTable{ margin: 2px solid brown;  }
 
-
+.ahistory{ padding: 10px; font-weight: bold;     position: absolute; left: 250px; top:190px; }
